Bug 1971059 - Dependency tree items are misaligned

--- a/skins/standard/dependency-tree.css
+++ b/skins/standard/dependency-tree.css
@@ -64,7 +64,7 @@
 }
 
 .expander {
-  width: 18px;
+  width: 18px !important;
   height: 18px;
 }
 
